# soke

./: .gitignore  INSTALL.md  INSTRUKCJA_INSTALACJI.txt  QUICKSTART.md  README.md  install.bat  install.ps1  pyproject.toml  run.bat  run.ps1
src/soke/: app.py
src/soke/data/: operators.py
src/soke/data/tariffs/2026/: enea.yaml  energa.yaml  pge.yaml  stoen.yaml  tauron.yaml
src/soke/domain/: models.py
src/soke/engine/: module_a.py  module_b.py  module_c.py  module_d.py  module_pv.py  summary.py
src/soke/scripts/: extract_stub.py  fetch_tariffs.py
src/soke/ui/: components.py  pages.py  theme.py
tests/: test_module_a.py  test_module_b.py  test_module_c.py
